@@ -1,5 +1,13 @@
 2012-12-15  Andy Estes  <aestes@apple.com>
 
+        Fix the build.
+
+        * UIProcess/WebContext.cpp:
+        (WebKit::WebContext::registerSchemeForCustomProtocol):
+        (WebKit::WebContext::unregisterSchemeForCustomProtocol):
+
+2012-12-15  Andy Estes  <aestes@apple.com>
+
         [WebKit2] Register schemes with the network process if it is being used
         https://bugs.webkit.org/show_bug.cgi?id=105113
 
